Fix header on Safari

--- a/app/assets/stylesheets/auth.scss
+++ b/app/assets/stylesheets/auth.scss
@@ -7,7 +7,7 @@ body.homepage #page-header-wrapper {
   justify-content: space-between;
   flex-direction: row;
   align-items: center;
-  height: 7.6vh;
+  height: 8vh;
 }
 
 .if-user-logged-out {
@@ -15,7 +15,7 @@ body.homepage #page-header-wrapper {
   justify-content: space-between;
   flex-direction: row;
   align-items: center;
-  height: 7.6vh;
+  height: 8vh;
 }
 
 
