--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -64,15 +64,15 @@ color: #3CB371;
 }
 
 .logo-buts {
-  height: 30px;
+  // height: 30px;
   padding: 0 15px;
   background-color : transparent;
   border: none;
   outline: none;
   border-radius: 5px;
   color: white;
-  margin-bottom: 12px
-
+  // margin-bottom: 12px
+  vertical-align: middle;
 }
 
 
